<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_ingredients"
        android:icon="@drawable/ic_ingredients_black_24dp"
        android:title="@string/title_ingredients" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/ic_favourites_black_24dp"
        android:title="@string/title_favourites" />

</menu>